gerando pdf com grid e com mais precisao